# Task-Manager

./: .gitignore  Makefile  README.md  build.sh  conftest.py  manage.py  pyproject.toml  pytest.ini
code/: Makefile  pyproject.toml
code/task_manager/: urls.py
code/task_manager/task_manager_app/statuses/: models.py
code/task_manager/templates/: base.html
code/task_manager/templates/users/: login.html  (+1 more)
code/tests/: tests_statuses.py
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_labels.py  test_models.py  test_views.py  testcase.py  tests_labels.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_statuses.py  test_views.py  testcase.py
task_manager/task_manager_app/: admin.py  apps.py  forms.py  tests.py
task_manager/task_manager_app/labels/: forms.py  models.py  urls.py  views.py
task_manager/task_manager_app/statuses/: forms.py  urls.py  views.py
task_manager/task_manager_app/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task_manager_app/users/: forms.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_description_and_more.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_tasks.py  test_views.py  testcase.py  tests_tasks.py
task_manager/templates/: base.html  home.html
task_manager/templates/labels/: label_confirm_delete.html  label_form.html
task_manager/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/users/: user_confirm_delete.html  user_create.html  user_form.html  user_list.html
task_manager/tests/: tests_labels.py  tests_users.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_forms.py  test_models.py  test_users.py  test_views.py  testcase.py
tests/: __init__.py  pytest.ini
(+7 files in other folders)
